# GeneralEvaluation

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  LICENSE.txt  README.md  USAGE.md  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
data/: general_eval_demo_data.csv
general_eval/: app.py  general_eval_lib.py  main.py  metrics.py  utils.py
scripts/: start_ark_general_eval.sh
src/: app.py  general_eval_lib.py  main.py  utils.py
